# rieoptax

./: .gitignore  CITATION.cff  readme.md  requirement.txt  setup.cfg  todo.txt  useful_discussion.txt
.github/workflows/: test.yml
Examples/: frechet_mean.ipynb  private_leading_vector.ipynb
bc/rieoptax/: rieoptax_loss_10_Retr.npy  rieoptax_loss_1_Retr.npy  rieoptax_loss_5_Retr.npy  rieoptax_time_10_Retr.npy  rieoptax_time_1_Retr.npy  rieoptax_time_5_Retr.npy
bc/tf-riemopt/: tf_riemopt_loss_10_Retr.npy  tf_riemopt_loss_1_Retr.npy  tf_riemopt_loss_5_Retr.npy  tf_riemopt_time_10_Retr.npy  tf_riemopt_time_1_Retr.npy  tf_riemopt_time_5_Retr.npy
notebooks/: Combinatorial Construction Of Hyperbolic Embeddings.ipynb  Euclidean PCA as  Optimization on Grassmann Manifold.ipynb  Log Determinant Optimization on SPD Manifold.ipynb  LogdetSPD.ipynb  PCAonGrassmann.ipynb  Poincare Variational Auto Encoders.ipynb  Poincare word embeddings.ipynb  Stochastic Adaptive Optimization on Riemannian Manifolds.ipynb  TraceRegressionSPD.ipynb  Visualization of Hyperbolic Embeddings By Horospherical Projections.ipynb  bench-py.ipynb
rieoptax/: core.py
rieoptax/geometry/: base.py  coupling.py  euclidean.py  grassmann.py  hyperbolic.py  hypersphere.py  nfold.py  spd.py  stiefel.py
rieoptax/mechanism/: dp_rsgd_mechansim.py  dp_rsvrg_mechanism.py  gradient_perturbation.py  output_perturbation.py
rieoptax/mechanism.py/: dp_rgd_mechanism.py
rieoptax/metrics/: base.py  grassmann.py  hyperbolic.py  spd.py  stiefel.py
src/: testing.ipynb
tests/: test_hyperbolic.py  test_spd.py
(+20 files in other folders)
