[metadata]
name = rieoptax
version = 0.0.1
author = Saiteja Utpala
author_email = saitejautpala@gmail.com
description = Riemannian Optimization in JAX
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
url = https://github.com/SaitejaUtpala/rieoptax
project_urls =
    Homepage = ttps://github.com/SaitejaUtpala/rieoptax
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3


[options]
packages = find:
python_requires = >= 3.7
zip_safe = False
install_requires =
    autodp
    chex
    jax
    jaxlib
    numpy
    typing_extensions

